[package]
name = "rustyref"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13.1", features = ["derive"] }
env_logger = "0.10.0"
image = "0.24.7"
log = "0.4.20"
pollster = "0.3.0"
wgpu = "0.17.0"
winit = "0.28.6"

[dependencies.uuid]
version = "1.4.1"
features = ["v4", "fast-rng", "macro-diagnostics"]
